[project]
name = "langchain-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "ipykernel>=7.2.0",
    "langchain-ollama>=1.0.1",
    "ollama>=0.6.1",
    "standards>=0.0.1",
    "streamlit>=1.55.0",
]
